# Lidar-gym

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  download_dataset.sh  example.py  my_agent.py  playground.py  setup.py  test.py
AIgym/: __init__.py  camera.py  lidar_gym.py
gym/: camera.py  lidar_gym.py  playground.py
include/voxel_map/: strided.h  voxel_map.h  wrapper.h
lidar_gym/: __init__.py  lidar_gym.py
lidar_gym/agent/: DDPG.py  DQL.py  PPO.py  SARSA.py  __init__.py  actorcritic.py  agent_test.py  dDDPG.py  models.py  my_agent.py  pipeline.py  simpleStochAC.py  stochAC.py  supervised_agent.py  supervised_agent_train.py  tforce_classes.py
lidar_gym/agent/models/: supervised_small.json
lidar_gym/agent/trained_models/: supervised_small.h5  supervised_toy_model.h5
lidar_gym/envs/: __init__.py  lidar_gym.py
lidar_gym/testing/: __init__.py  plot_map.py  test_map.py
lidar_gym/tools/: __init__.py  camera.py  map_parser.py  math_processing.py  printer.py  sum_tree.py
lidar_gym/visualiser/: __init__.py  plot.py  plot3d.py  plot_map.py
python_wrapper/: array.h  test_voxel_map.py  voxel_map.cpp
testing/: __init__.py  test_map.py
tools/: __init__.py  camera.py  map_parser.py  math_processing.py
